--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 certifi==2021.5.30
-cffi @ file:///tmp/build/80754af9/cffi_1600699165083/work
+cffi
 chardet==3.0.4
 click==7.1.2
-cryptography @ file:///tmp/build/80754af9/cryptography_1601047419573/work
+cryptography
 cycler==0.10.0
 dataclasses==0.7
-elasticsearch @ file:///tmp/build/80754af9/elasticsearch_1600294816279/work
+elasticsearch
 Flask==1.1.2
 Flask-Cors==3.0.9
 future==0.18.2
@@ -14,7 +14,7 @@ gunicorn==20.0.4
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
+joblib
 kiwisolver==1.3.1
 Mako==1.0.7
 MarkupSafe==1.1.1
@@ -27,26 +27,26 @@ mkl-service==2.3.0
 multipledispatch==0.6.0
 mypy-extensions==0.4.3
 nltk==3.4.5
-numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1596233737064/work
-pandas @ file:///tmp/build/80754af9/pandas_1596825848625/work
+numpy
+pandas
 Pillow==8.2.0
 psutil==5.7.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycparser
 pymongo==3.10.1
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
+pyOpenSSL
 pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2020.1
-redis @ file:///tmp/build/80754af9/redis-py_1593435590316/work
-regex @ file:///tmp/build/80754af9/regex_1596829710510/work
+redis
+regex
 requests==2.23.0
-scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1598379690588/work
-scipy @ file:///tmp/build/80754af9/scipy_1592930540905/work
+scikit-learn
+scipy
 six==1.11.0
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tqdm @ file:///tmp/build/80754af9/tqdm_1596810128862/work
+threadpoolctl
+tqdm
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
 urllib3==1.23
